# ldasoft

./: install_meson.sh  meson.build
gbmcmc/src/: GalacticBinary.h  GalacticBinaryIO.c  GalacticBinaryMCMC.c
